Fixed wrong size of field for filter

--- a/src/app/views/financial-manager/financials-list/financials-list.component.css
+++ b/src/app/views/financial-manager/financials-list/financials-list.component.css
@@ -1,7 +1,7 @@
 .table-filter-fields {
-  width: 100%;
+  width: 50%;
 }
 
 td {
-  padding-right: 8px;
+  padding-right: 1px;
 }
